black background on mobile until i have time to fix

--- a/src/components/PoetryPage.scss
+++ b/src/components/PoetryPage.scss
@@ -60,12 +60,12 @@ body {
   width: 100vw;
   height: 100vh; /* Use min-height: 100vh if content exceeds screen */
   @media (max-width: 768px) {
-    background: 
-    linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url('../assets/pinkhairgirl.jpg');
-      background-attachment: fixed; /* Optional: Creates parallax effect */
-      background-repeat: no-repeat;
-    background-color: black;
+    // background: 
+    // linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    // url('../assets/pinkhairgirl.jpg');
+    //   background-attachment: fixed; /* Optional: Creates parallax effect */
+    //   background-repeat: no-repeat;
+    background: black;
   }
 }
 
