--- a/src/components/loader/Loader.scss
+++ b/src/components/loader/Loader.scss
@@ -23,11 +23,11 @@
     @media (max-width: 768px) {
         // width: 100%;
         // min-width: 100%;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url('../../assets/pinkhairgirl.jpg');
-    background-attachment: fixed; /* Optional: Creates parallax effect */
-    background-repeat: no-repeat;
-    background-color: black;
+    // background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    // url('../../assets/pinkhairgirl.jpg');
+    // background-attachment: fixed; /* Optional: Creates parallax effect */
+    // background-repeat: no-repeat;
+    background: black;
     }
   }
   
